--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
 <head>
     <title>GAME</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
     <script language="javascript" src="script.js"></script>
-    <script type="text/javascript" src="jquery-1.12.0.js"></script>
+    <script type="text/javascript" src="jquery-2.2.3.js"></script>
 </head>
 <body>
-<div id="main_window"></div>
+<div id="main_screen">
+
+</div>
 </body>
 </html>
